sort games and languages, fix layout issue

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -97,6 +97,10 @@
   }
 }
 
+#game-cards {
+  display: flex;
+  flex-wrap: wrap;
+}
 .game-card {
   width: 14rem;
   float: left;
